# sugar

extensions/cpsection/aboutme/: view.py
extensions/cpsection/updater/: view.py
extensions/deviceicon/: network.py
po/: af.po  am.po  ar.po  ay.po  ayc.po  aym.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  en_US.po  es.po  eu.po  fa.po  fa_AF.po  fr.po  gu.po  ha.po  he.po  hi.po  ht.po  hu.po  hus.po  hy.po  id.po  it.po  ja.po  km.po  ko.po  kos.po  mg.po  mi.po  mk.po  (+37 more)
src/jarabe/: Makefile.am  b2g.py  config.py.in  http.py  main.py
src/jarabe/desktop/: favoritesview.py  keydialog.py  meshbox.py  networkviews.py  schoolserver.py
src/jarabe/journal/: Makefile.am  controler.py  entry.py  expandedentry.py  fields.py  homogenetable.py  homogeneview.py  journalactivity.py  journaltoolbox.py  listmodel.py  listview.py  misc.py  model.py  objectchooser.py  palettes.py  preview.py  sugarbin.py  thumbsview.py  view.py  widgets.py
src/jarabe/model/: adhoc.py  bundleregistry.py  network.py  shell.py
src/jarabe/util/: emulator.py
src/jarabe/view/: service.py
