sugardir = $(pythondir)/jarabe/journal
sugar_PYTHON =              \
	__init__.py             \
	controler.py            \
	detailview.py           \
	entry.py                \
	expandedentry.py        \
	homogenetable.py        \
	homogeneview.py         \
	journalactivity.py      \
	journalentrybundle.py   \
	journaltoolbox.py       \
	listview.py             \
	misc.py                 \
	modalalert.py           \
	model.py                \
	objectchooser.py        \
	palettes.py             \
	preview.py              \
	thumbsview.py           \
	view.py                 \
	volumestoolbar.py       \
	widgets.py
